[project]
name = "activitypub-server"
version = "0.0.1"
description = "ActivityPub Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.1",
    "complexipy>=0.4.0",
    "pylint",
    "pytest>=5.0.0",
    "pytest-cov",
    "fastapi[all]>=0.115.3",
    "motor>=3.6.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.2",
]
