[project]
name = "solana-tribe"
version = "0.0.1"
description = "Join the Tribe!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.1",
    "complexipy>=0.4.0",
    "pylint",
    "pytest>=5.0.0",
    "pytest-cov",
    "fastapi[all]>=0.115.3",
    "motor>=3.6.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.2",
    "taskiq>=0.11.7",
    "taskiq-redis>=1.0.2",
    "rdflib>=7.1.0",
    "httpsig>=1.3.0",
    "passlib>=1.7.4",
    "pyjwt>=2.9.0",
]
